# containeRS

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  reset.sh
backend/: Cargo.toml  Dockerfile  sqlx-data.json
backend/.sqlx/: query-157c5bfe0594f6005cc59f66159417f887f35965aa66ec46ffec8b0d306b7068.json  query-15e65876152181e00e44f077d6883c6114a018e3bd63a90c42e6c2c26ba550cd.json  query-15eda4db0000fac3764e7e8c28cf942eb7a85d2d5a0914cbcde2592292b46ffa.json  query-1b52e88ce7fc71920a259c7a0044c2f50077364ef411838c7ff3f07455fdf0ef.json  query-1c112383df0e7382022b03285b2a80596fab34f6a25f13b8c2981473290c86a6.json  query-1c43a8cdbb95ac62d4e5194833cddd966522701047f1b8e6de941c7c9c93f859.json  query-3698139d797fcde071979cd2c874406a73265ab3393897618dea7edc0e8ad3d0.json  query-3993233b48d68b6e01cde731956d988841abfcf55e8d0bd28654a4fe9b8ab6e0.json  query-3ba848f2cc895f004b284b0207edc0b5c861e1a9377d448b5b6791573fc6d039.json  query-441b8a974006e6a594e16a4db0548ac209750b02ed72894cd0e65aceaef3aad4.json  query-49ead76c6c74d2427ab500921fbe4e405f0cd1df08bbcbd93bf1ef4b2b151bd6.json  query-4db0fe0c8bec316a8d6d0d8f2637afec0676f78ef4210465e9205abea3a8f355.json  query-4f6c18fc08aee4f60e671e21e413dddeeae39c7291eaee8e7801254e079e4666.json  query-542881145882915b9de843c3f47fdfcb004ec803c5cb58d3c798c9605545aeae.json  query-55714cf703e93dbc6dcd889a1f13ef5f72303c5adedf9d6dee51b646e78bacdf.json  query-5905ea2a96c2484c3b6eb746c3af8e6844c581cc542dc54d9e3cdaeaeec28fe7.json  query-5bbafec426505370794bc5490d88ab5233058e930e06fa0b735ab0607b15ba28.json  (+13 more)
backend/src/: debug_headers.rs  (+2 more)
(+126 files in other folders)
