[package]
name = "container-registry-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
thiserror = "1.0"
uuid = { version = "1.3", features = ["serde"] }
sqlx = { version = "0.6", features = [
    "runtime-async-std-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "offline",
] }
sha256 = "1.1.4"
