[package]
name = "container-registry-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = [
    "runtime-async-std-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
sha256 = "1.5"
docker-api = "0.14"
rocket_dyn_templates = { version = "0.1", features = ["handlebars"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
